--- a/vue-demos/index.html
+++ b/vue-demos/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mapotato</title>
+
+    <!-- 动态引入埋点SDK -->
+    <% if (process.env.NODE_ENV === 'production') { %>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>
+      LA.init({ id: '3I2mB1zc6LR84hdA', ck: '3I2mB1zc6LR84hdA' });
+    </script>
+    <% } %>
   </head>
   <body>
     <div id="app"></div>
