--- a/vue-demos/index.html
+++ b/vue-demos/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="zh-CN">
   <head>
+    <!-- 配置项目根路径 -->
+    <base href="/mapotato">
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
