--- a/vue-demos/index.html
+++ b/vue-demos/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <!-- 配置项目根路径 -->
-    <base href="/mapotato">
+    <base href="/mapotato" />
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,6 @@
     <% } %>
   </head>
   <body>
-    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
