--- a/vue-demos/index.html
+++ b/vue-demos/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mapotato</title>
+    <title>Mapotato-test</title>
 
     <!-- 动态引入埋点SDK -->
     <% if (process.env.NODE_ENV === 'production') { %>
